--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-content">
   <mat-card>
-    <h2>Login</h2>
+    <h2>Connexion</h2>
     <form [formGroup]="loginForm" (ngSubmit)="loginClick()">
       <div class="m1">
         <mat-form-field>
