--- a/src/app/desktop-detail/desktop-detail.component.html
+++ b/src/app/desktop-detail/desktop-detail.component.html
@@ -1,7 +1,7 @@
 <div class="flex p1 m1">
+  @if(desktop()!.id > 0) {
   <mat-card class="p1 flex w100">
-    @if(desktop()!.id != -1) {
-    <div class="">
+    <div class="m1">
       <h1>{{ desktop()!.name }}</h1>
       <div class="list">
         @for(booking of desktop()!.bookings; track booking.id){
@@ -31,12 +31,12 @@
       </div>
       }
     </div>
-    } @else {
-    <div class="start">
-      <div><h1>Cliquez sur un bureau pour commencer</h1></div>
-      <div><img src="assets/arrow.png" /></div>
-    </div>
-
-    }
   </mat-card>
+  } @else if(desktop()!.id == -1) {
+  <mat-card>
+    <div class="start">
+      <div><h1>Cliquez sur un bureau pour voir ses réservations</h1></div>
+      <div><img src="assets/arrow.png" /></div></div
+  ></mat-card>
+  }
 </div>
