--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,4 +9,14 @@
       (onDelete)="loadData()"
     ></app-floorplan>
   </section>
+  <section>
+    <div class="m1">
+      <mat-card>
+        <div class="m1">
+          <h2>Règles</h2>
+          <div>Vous ne pouvez avoir qu'une réservation par jour.</div>
+        </div>
+      </mat-card>
+    </div>
+  </section>
 </div>
