--- a/src/app/desktop-detail/desktop-detail.component.html
+++ b/src/app/desktop-detail/desktop-detail.component.html
@@ -1,12 +1,12 @@
 <div class="flex p1 m1">
-  @if(desktop()!.id > 0) {
+  @if(desktop()!.id > 0 && !isMultipleDateSelection) {
   <mat-card class="p1 flex w100">
     <div class="m1">
       <h1>{{ desktop()!.name }}</h1>
       <div class="list">
-        @for(booking of desktop()!.bookings; track booking.id){
+        @for(booking of getTodayBooking(); track booking.id){
         <div class="flex align-center line">
-          <div class="m1" [class.currentDate]="isCurrentDate(booking.date)">
+          <div class="m1">
             {{ booking.date | date : "dd/MM/YYYY" }} - {{ booking.email }}
           </div>
           <div>
@@ -19,7 +19,7 @@
         </div>
         } @empty {
         <div class="m1">
-          <div class="m1">Aucune réservation</div>
+          <div class="m1">Aucune réservation pour ce jour</div>
         </div>
         }
       </div>
@@ -36,6 +36,12 @@
   <mat-card>
     <div class="start">
       <div><h1>Cliquez sur un bureau pour voir ses réservations</h1></div>
+      <div><img src="assets/arrow.png" /></div></div
+  ></mat-card>
+  } @else if(desktop()!.id == -2) {
+  <mat-card>
+    <div class="start">
+      <div><h1>Cliquez sur un bureau à réserver</h1></div>
       <div><img src="assets/arrow.png" /></div></div
   ></mat-card>
   }
