--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -11,6 +11,6 @@
 }
 
 .selected-date {
-  background-color: var(--color-secondary) !important;
+  background-color: var(--color-accent) !important;
   border-radius: 50%;
 }
