--- a/src/app/desktop-detail/desktop-detail.component.scss
+++ b/src/app/desktop-detail/desktop-detail.component.scss
@@ -23,3 +23,15 @@ img {
   max-height: 40vh;
   overflow-y: auto;
 }
+
+.today {
+  font-weight: 500;
+}
+
+.button-delete {
+  margin-left: 10px;
+}
+
+.card {
+  min-width: 450px;
+}
