--- a/src/app/agenda/agenda.component.scss
+++ b/src/app/agenda/agenda.component.scss
@@ -26,3 +26,53 @@ button {
 .mat-focus-indicator {
   background-color: transparent !important;
 }
+
+.table {
+  margin-top: 10px;
+  table {
+    border-spacing: 1;
+    border-collapse: collapse;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+  }
+  table thead tr {
+    height: 50px;
+    background: var(--color-primary);
+  }
+  table tbody tr {
+    height: 50px;
+  }
+  table tbody tr:last-child {
+    border: 0;
+  }
+  table td,
+  table th {
+    text-align: left;
+  }
+
+  .table100-head th {
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.2;
+    font-weight: unset;
+  }
+
+  tbody tr:nth-child(even) {
+    background-color: #f5f5f5;
+  }
+
+  tbody tr {
+    font-size: 15px;
+    color: #808080;
+    line-height: 1.2;
+    font-weight: unset;
+  }
+
+  .column1 {
+    padding-left: 40px;
+  }
+}
