--- a/src/app/floorplan/floorplan.component.html
+++ b/src/app/floorplan/floorplan.component.html
@@ -1,3 +1,10 @@
+<div class="title">
+  <h2>
+    Réservations pour le
+    {{ selectedDate() | date : "cccc dd/MM/YYYY" | titlecase }}
+  </h2>
+</div>
+
 <div class="main">
   <div class="legend">
     <ul>
@@ -41,6 +48,14 @@
           [style.transform]="'rotate(' + desktop.angle + 'deg)'"
           label="Détails"
         />
+        <text
+          class="desktop-text"
+          (click)="onDeskClick(desktop)"
+          [attr.y]="desktop.yCoord + 18"
+          [attr.x]="getXPos(desktop.xCoord, desktop.id)"
+        >
+          {{ desktop.id }}
+        </text>
         }
       </g>
     </svg>
