--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
       [desktopList]="desktopList()"
       [selectedDate]="selectedDateCalendar"
       (onDelete)="loadData()"
+      [isSelectionMode]="false"
     ></app-floorplan>
   </section>
   <section>
