--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,34 @@
 <main>
-  <a [routerLink]="['/']">
-    <header class="brand-name">
-      <div>
-        <div class="flex align-center">
-          <div>
-            <h1>Buro</h1>
-          </div>
-          @if(localstorageService.hasToken() && this.desktopList &&
-          this.desktopList.length > 0) {
-          <div>
-            <div class="example-button-container">
-              <button mat-fab extended (click)="openBookingDialog()">
-                <mat-icon>calendar_today</mat-icon>
-                Nouvelle Réservation
-              </button>
-            </div>
-          </div>
-          }
-        </div>
-      </div>
-      <div class="name flex align-center">
-        <div class="ml-1">{{ localstorageService.currentUserEmail() }}</div>
+  <header class="brand-name">
+    <div>
+      <div class="flex align-center">
         <div>
-          @if(localstorageService.hasToken()) {
-          <button mat-mini-fab (click)="onLogoutClick()">
-            <mat-icon>logout</mat-icon>
-          </button>
-          }
+          <a [routerLink]="['/']"><h1>Buro</h1></a>
         </div>
+        @if(localstorageService.hasToken() && this.desktopList &&
+        this.desktopList.length > 0) {
+        <div>
+          <div class="example-button-container">
+            <button mat-fab extended (click)="openBookingDialog()">
+              <mat-icon>calendar_today</mat-icon>
+              Nouvelle Réservation
+            </button>
+          </div>
+        </div>
+        }
       </div>
-    </header>
-  </a>
+    </div>
+    <div class="name flex align-center">
+      <div class="ml-1">{{ localstorageService.currentUserEmail() }}</div>
+      <div>
+        @if(localstorageService.hasToken()) {
+        <button mat-mini-fab (click)="onLogoutClick()">
+          <mat-icon>logout</mat-icon>
+        </button>
+        }
+      </div>
+    </div>
+  </header>
   <section class="content">
     <router-outlet></router-outlet>
   </section>
