--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <div class="flex align-center">
         <div>
           <a [routerLink]="['/']"><h1>Buro</h1></a>
+          <span class="version">{{ version }}</span>
         </div>
         @if(localstorageService.hasToken() && this.desktopList &&
         this.desktopList.length > 0) {
