--- a/src/app/desktop-detail/desktop-detail.component.html
+++ b/src/app/desktop-detail/desktop-detail.component.html
@@ -1,7 +1,14 @@
-<div class="flex p1 m1">
+<div class="container flex p1 m1">
+  
   @if(desktop()!.id > 0 && !isMultipleDateSelection) {
+    <div class="title">
+       
+    </div>
   <div class="detail m1 p1 flex card">
-    <h1>Bureau {{ desktop()!.id }}</h1>
+    <h1>Bureau {{ desktop()!.id }} : réservations du
+      {{ selectedDate() | date : "cccc dd/MM" | titlecase }}
+      au
+      {{ endSelectedDate() | date : "dd/MM" | titlecase }}</h1>
     <div class="list">
       <app-booking-table
         [isDesktopDetailMode]="true"
