--- a/src/app/desktop-detail/desktop-detail.component.scss
+++ b/src/app/desktop-detail/desktop-detail.component.scss
@@ -40,4 +40,14 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 0;
+}
+
+.container {
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  font-weight: bolder;
 }
