--- a/src/app/booking-table/booking-table.component.scss
+++ b/src/app/booking-table/booking-table.component.scss
@@ -1,32 +1,3 @@
-.booked-date {
-  background-color: var(--color-accent);
-  border-radius: 50%;
-}
-.demo-inline-calendar-card {
-  width: 300px;
-  // cursor: default !important;
-}
-
-button {
-  //cursor: default !important;
-}
-
-.mat-calendar-body-cell :hover {
-  background-color: transparent !important;
-}
-
-.mat-calendar-body-cell button :hover {
-  background-color: transparent !important;
-}
-
-.mat-calendar-body-active :hover {
-  background-color: transparent !important;
-}
-
-.mat-focus-indicator {
-  background-color: transparent !important;
-}
-
 .table {
   margin-top: 10px;
   table {
@@ -91,4 +62,22 @@ button {
 .delete-button:hover {
   background-color: #e6e6e6;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 1600px) {
+
+
+
+  .table {
+
+    .column1 {
+      padding-left: 10px;
+    }
+
+    .column2 {
+      text-align: center;
+    }
+
+    
+  }
 }
