--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -17,4 +17,11 @@
 
 .calendar {
   margin-top: 40px;
+  margin-left: 10px;
+}
+
+@media only screen and (max-width: 1600px) {
+  .demo-inline-calendar-card {
+    width: 240px;
+  }
 }
