--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       }
       
       <div>
-        @if(localstorageService.hasToken()) {
+        @if(localstorageService.hasToken() && localstorageService.currentUserEmail()) {
         <button mat-mini-fab (click)="onLogoutClick()">
           <mat-icon>logout</mat-icon>
         </button>
