--- a/src/app/floorplan/floorplan.component.html
+++ b/src/app/floorplan/floorplan.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" [class.selectionMode]="isSelectionMode()">
   @if(!isSelectionMode()){
   <div class="legend">
     <ul>
@@ -26,7 +26,7 @@
   }
   <div class="floorplan">
     <img id="floorplan_img" src="assets/plan.png" />
-    <svg id="svg" xmlns="http://www.w3.org/2000/svg">
+    <svg id="svg" [class.selectionMode]="isSelectionMode()" xmlns="http://www.w3.org/2000/svg">
       
         <title>Plan du site</title>
         @for (desktop of desktopList(); track desktop.id) {
