--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,4 +1,4 @@
 <h2 mat-dialog-title>Mes prochaines réservations</h2>
 <app-booking-table
-  [bookingList]="getBookingSorted()"
+  [bookingList]="getFutureBookingSorted()"
 ></app-booking-table>
