--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@ header {
   align-items: center;
   justify-content: space-between;
   background-color: var(--color-primary);
+  margin-bottom : 20px;
 }
 .content {
   padding: var(--content-padding);
