Fixed header table

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Mes prochaines réservations</h2>
+<div class="titleRes">Mes prochaines réservations</div>
 <app-booking-table
   [bookingList]="getFutureBookingSorted()"
 ></app-booking-table>
