--- a/src/app/booking-table/booking-table.component.scss
+++ b/src/app/booking-table/booking-table.component.scss
@@ -1,53 +1,3 @@
-.table {
-  max-height: 60vh;
-  margin-top: 10px;
-  table {
-    border-spacing: 1;
-    border-collapse: collapse;
-    background: rgb(245, 245, 245);
-    border-radius: 10px;
-    overflow: hidden;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-  }
-  table thead tr {
-    height: 50px;
-    background: var(--color-primary);
-  }
-  table tbody tr {
-    height: 50px;
-  }
-  table tbody tr:last-child {
-    border: 0;
-  }
-  table td,
-  table th {
-    text-align: left;
-  }
-
-  .table100-head th {
-    font-size: 18px;
-    color: #fff;
-    line-height: 1.2;
-    font-weight: unset;
-  }
-
-  tbody tr:nth-child(even) {
-    background-color: #e2e2e2;
-  }
-
-  tbody tr {
-    font-size: 15px;
-    color: #808080;
-    line-height: 1.2;
-    font-weight: unset;
-  }
-
-  .column1 {
-    padding-left: 40px;
-  }
-}
 
 .delete-button {
   border-radius: 50%;
@@ -65,20 +15,73 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width: 1600px) {
 
 
-
-  .table {
-
-    .column1 {
-      padding-left: 10px;
-    }
-
-    .column2 {
-      text-align: center;
-    }
-
-    
+.tableFixHead          { 
+  overflow-y: scroll;
+   height: 500px; 
+   border-radius: 10px;
+  width: 76%;
+  overflow-x: hidden;
   }
+.tableFixHead thead th { 
+  position: sticky; 
+  top: 0;
+  z-index: 1; 
+  background-color: var(--color-primary);
+  font-size: 18px;
+  color: #fff;
+  line-height: 1.2;
+  font-weight: unset;
+ }
+
+
+table  { 
+  border-collapse: collapse;
+  background: rgb(245, 245, 245);
+    width  : 100%;
+   }
+th, td { padding: 8px 16px; }
+
+
+thead tr {
+  height: 50px;
+}
+table tbody tr {
+  height: 50px;
+}
+table tbody tr:last-child {
+  border: 0;
+}
+
+table tbody tr {
+  height: 50px;
+}
+table tbody tr:last-child {
+  border: 0;
+}
+table td,
+table th {
+  text-align: left;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #e2e2e2;
+}
+
+tbody tr {
+  font-size: 15px;
+  color: #808080;
+  line-height: 1.2;
+  font-weight: unset;
+}
+
+table td,
+table th {
+  text-align: left;
+}
+
+.isDetailed {
+  width: 100%;
+  overflow-y: hidden;
 }
