--- a/src/app/desktop-detail/desktop-detail.component.scss
+++ b/src/app/desktop-detail/desktop-detail.component.scss
@@ -17,6 +17,8 @@ img {
   flex-direction: column;
   align-items: center;
   margin: 10px;
+  font-size: 22px;
+  font-weight: 300;
 }
 
 .list {
@@ -49,5 +51,6 @@ img {
 }
 
 .desktopTitle {
-  font-size: 1.2em;
+  font-size: 22px;
+  font-weight: 300;
 }
