--- a/src/app/booking/booking.component.scss
+++ b/src/app/booking/booking.component.scss
@@ -28,9 +28,6 @@
   margin-top: 20px;
 }
 
-.table {
-  width: 35%;
-}
 
 .top {
   justify-content: space-between;
@@ -43,4 +40,12 @@
 
 .title {
   margin-left: 20px;
+}
+
+
+.resCreated {
+  font-size: 22px;
+  font-weight: 300;
+  left: -50px;
+  position: relative;
 }
