jour selectionné blanc

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,7 +87,7 @@ html {
 :root {
   @include mat.datepicker-overrides((
     
-    calendar-date-selected-state-text-color: var(--color-error),
+    calendar-date-selected-state-text-color: #fff,
     
   ));
 }
